accounts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: accounts-depl
spec:
 replicas: 1
 selector:
  matchLabels:
   app: accountservice
 template:
  metadata:
   labels:
    app: accountservice
  spec:
   containers:
    - name: accountservice
      image: olumz1/zoollaraccountapi:latest
