properties-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: properties-depl
spec:
 replicas: 1
 selector:
  matchLabels:
   app: propertyservice
 template:
  metadata:
   labels:
    app: propertyservice
  spec:
   containers:
    - name: propertyservice
      image: olumz1/zoollarpropertiesapi:latest
