apigateway-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
 name: apigatewayservice-srv
spec:
 type: NodePort
 selector:
  app: apigatewayservice
 ports:
  - name: apigatewayservice
    protocol: TCP
    port: 80
    targetPort: 80
