blogs-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
 name: blognpservice-srv
spec:
 type: NodePort
 selector:
  app: blogservice
 ports:
  - name: blogservice
    protocol: TCP
    port: 80
    targetPort: 80
