properties-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
 name: propertynpservice-srv
spec:
 type: NodePort
 selector:
  app: propertyservice
 ports:
  - name: propertyservice
    protocol: TCP
    port: 80
    targetPort: 80
