ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: zoollar.com
    http:
      paths:
      # - pathType: Prefix
      #   path: "/api/blogs"
      #   backend:
      #     service:
      #       name: blogs-clusterip-srv
      #       port:
      #         number: 80
      - pathType: Prefix
        path: /api/account
        backend:
          service:
            name: accounts-clusterip-srv
            port:
              number: 80
      # - pathType: Prefix
      #   path: "/api/properties"
      #   backend:
      #     service:
      #       name: properties-clusterip-srv
      #       port:
      #         number: 80
